Fix issue with login page getting header information it shouldn't have yet and make sidebar stretch to bottom

--- a/front-end/src/app/layout/layout.component.scss
+++ b/front-end/src/app/layout/layout.component.scss
@@ -1,8 +1,11 @@
 
+#sidebar-container {
+  min-height: calc(100vh - 2rem);
+}
+
 .main-content {
-  margin-left: 32px;
-  margin-right: 32px;
-  margin-bottom: 32px;
+  margin: 0;
+  padding: 0;
 }
 
 .header-container {
@@ -12,4 +15,44 @@
 
 .row {
   margin: 0;
+}
+
+.footer-full {
+  position: absolute;
+  width: 100%;
+}
+
+.footer-sidebar {
+
+}
+
+app-footer {
+  padding: 0;
+}
+
+
+#page-container {
+  position: relative;
+  min-height: 100vh;
+}
+
+.content-offset {
+  padding-bottom: 314px;
+}
+
+.header-container {
+  padding-bottom: 5px;
+  padding-top: 0;
+}
+
+.row {
+  margin: 0;
+}
+
+.sidebar-content-container {
+  min-height: calc(100vh - 2rem);
+  height: calc(100vh - 2rem);
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
